--- a/src/app/event-activity/event-activity.component.html
+++ b/src/app/event-activity/event-activity.component.html
@@ -19,7 +19,7 @@
                     <div id="overlay" class="new_event_menu_box" style="display: none;">
                         <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
                             <a class="text-white "><img src="/assets/images/overlay.png">
-                                <p>Collections</p>
+                                <p>New Event</p>
                             </a>
                         </div>
                         <div class="">
@@ -67,16 +67,19 @@
                         <input type="radio" id="test5" value="female" name="radio-group1">
                         <label for="test5">Female</label>
                     </div>
-                    <div class="eventC_item" *ngFor="let name of itemNamePrint;">
-                        <div class="row">
-                            <div class="col-12">
-                                <div class="event-count-box">
-                                    <div class="eventC_close float-left text-white">
-                                        <p class="text-white">{{name.itemName}}<p>
-                                    </div>
-                                    <div class="event_price float-right">
-                                        <p class="event_price"><img src="/assets/images/hecza.png">{{name.itemPrice}}
-                                        </p>
+                    <div class="event-count-box-scroll">
+                        <div class="eventC_item" *ngFor="let name of itemNamePrint;">
+                            <div class="row">
+                                <div class="col-12">
+                                    <div class="event-count-box">
+                                        <div class="eventC_close float-left text-white">
+                                            <p class="text-white">{{name.itemName}}<p>
+                                        </div>
+                                        <div class="event_price float-right">
+                                            <p class="event_price"><img
+                                                    src="/assets/images/hecza.png">{{name.itemPrice}}
+                                            </p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -85,8 +88,7 @@
                     <div class="collect_detail text-center" [ngClass]="eventId">
                         <span *ngFor="let item of allActivityList">
                             <div class="collect1_img">
-                                <div class="collect_img"
-                                    (click)="singleActivityDetails(item)">
+                                <div class="collect_img" (click)="singleActivityDetails(item)">
                                     <img *ngIf="singleEventDetails && singleEventDetails.profilePhoto"
                                         src="{{path}}{{singleEventDetails.profilePhoto}}">
                                 </div>
@@ -141,9 +143,6 @@
         </div>
     </section>
 </div>
-
-
-
 <div class="seventhStep" style="display:none">
     <section class="edit_event_section d-flex flex-wrap align-content-center">
         <div class="container-fluid">
@@ -164,30 +163,31 @@
                             </div>
                         </div>
                         <div id="overlay" class="new_event_menu_box" style="display: none;">
-                                <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
-                                    <a class="text-white "><img src="/assets/images/overlay.png">
-                                        <p>Collections</p>
-                                    </a>
-                                </div>
-                                <div class="">
-                                    <div class="event_menu">
-                                        <div class="all_menu_content  d-flex flex-wrap align-content-center">
-                                            <ul>
-                                                <li><a href="eventA.html" class="text-white new_event">my event</a></li>
-                                                <li><a href="new_event_slider.html" class="text-white my_event">new event</a>
-                                                </li>
-                                                <li><a href="add_bank_account.html" class="text-white my_account">bank
-                                                        account</a>
-                                                </li>
-                                                <li><a href="reset_password.html" class="text-white my_account">Reset
-                                                        Password</a>
-                                                </li>
-                                                <li><a href="#" class="text-white my_account">Logout</a></li>
-                                            </ul>
-                                        </div>
+                            <div class="m-auto pr-0 float-left new_event_menu slider_overlay">
+                                <a class="text-white "><img src="/assets/images/overlay.png">
+                                    <p>New Event</p>
+                                </a>
+                            </div>
+                            <div class="">
+                                <div class="event_menu">
+                                    <div class="all_menu_content  d-flex flex-wrap align-content-center">
+                                        <ul>
+                                            <li><a href="eventA.html" class="text-white new_event">my event</a></li>
+                                            <li><a href="new_event_slider.html" class="text-white my_event">new
+                                                    event</a>
+                                            </li>
+                                            <li><a href="add_bank_account.html" class="text-white my_account">bank
+                                                    account</a>
+                                            </li>
+                                            <li><a href="reset_password.html" class="text-white my_account">Reset
+                                                    Password</a>
+                                            </li>
+                                            <li><a href="#" class="text-white my_account">Logout</a></li>
+                                        </ul>
                                     </div>
                                 </div>
                             </div>
+                        </div>
                         <div *ngIf="singleEventDetails">
                             <div class="enter_event_title">
                                 <h6 class="text-center text-white">Event Hashtag</h6>
