--- a/src/app/display-page/display-page.component.html
+++ b/src/app/display-page/display-page.component.html
@@ -1,44 +1,5 @@
 <!-- Publicly Event Details -->
-
-<!-- <div class="container">
-    <div class="row">
-        <div class="col-12">
-            <button type="button" class="btn btn-primary" (click)="login()" *ngIf="!currentUser">Login
-            </button>
-            <div class="card" *ngFor="let item of publicEvents">
-                <div [ngStyle]="{background: getSrc(item.eventTheme)}" class="theme-background">
-                    <div class="row">
-                        <div class="col-4 m-auto">
-                            <img *ngIf="item && item.profilePhoto" src="{{path}}{{item.profilePhoto}}"
-                                class="rounded-circle img-fluid">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col text-center pt-4">
-                            <p>EventType:-
-                                <span>{{item.eventType}}</span>
-                            </p>
-                        </div>
-                        <div class="col text-center pt-4">
-                            <p>EventTitle:-
-                                <span>{{item.eventTitle}}</span>
-                            </p>
-                        </div>
-                        <div class="col text-center pt-4">
-                            <p>EventHashTag:-
-                                <span>{{item.hashTag}}</span>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div> -->
-
-
 <!-- Home page design integrate -->
-
 <section class="home_slider_section text-center slider_background d-flex flex-wrap align-content-center">
     <div class="container-fluid">
         <div class="home_slider">
@@ -54,8 +15,7 @@
                 <div class="inner_content_box d-flex flex-wrap align-content-center">
                     <div class="inner_content_elements_holder">
                         <h3 class="text-white">T<div>
-                            
-                        </div>hen, we’re all set to <br> help you do that with <br> style </h3>
+                            </div>hen, we’re all set to <br> help you do that with <br> style </h3>
                     </div>
                 </div>
             </div>
@@ -64,7 +24,8 @@
                     <div class="inner_content_elements_holder">
                         <img src="/assets/images/mail.png" alt="icon image">
                         <h2 class="text-white">#LeGo</h2>
-                        <h3 class="text-white">Just create a page with your <br> event hashtag, and share the <br> link with guests.</h3>
+                        <h3 class="text-white">Just create a page with your <br> event hashtag, and share the <br> link
+                            with guests.</h3>
                         <h2 class="text-white">#MeAndYou</h2>
                     </div>
                 </div>
