--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,95 +1,4 @@
-<!-- Loader  -->
-<!-- 
-<div class="load" *ngIf="isDiable">
-    <span></span>
-    <span></span>
-    <span></span>
-    <span></span>
-</div> -->
-
-<!-- Form of login user  -->
-<!-- 
-<div *ngIf="!isDiable">
-    <div class="row">
-        <div class="col-md-4 m-auto pt-5">
-            <div class="card p-5">
-                <form [formGroup]="loginForm" autocomplete="off">
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" id="email" class="form-control" formControlName="email"
-                            [ngClass]="{ 'is-invalid': f.email.touched && f.email.errors }">
-                        <div class="col-md-2" *ngIf="f.email.touched && f.email.errors" class="invalid-feedback">
-                            <div *ngIf="f.email.errors.required">Email is required</div>
-                            <div *ngIf="f.email.errors.email">Please enter valid Email</div>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="pwd">Password:</label>
-                        <input type="password" class="form-control" id="pwd" formControlName="password"  [type]="show ? 'text' : 'password'">
-                        <span toggle="#password-field" class="fa fa-fw fa-eye-slash field-icon toggle-password"
-                       (click)="password()"></span>
-                    </div>
-
-                    <div class="text-center">
-                        <button type="submit" (click)="onSubmitLogin()" class="btn btn-primary w-100"
-                            [disabled]="isDisable || loginForm.invalid">Submit</button>
-                    </div>
-                    <div class="row p-3">
-                        <div class="col-md-6">
-                            <button type="button" (click)="signInWithGoogleAccount()" class="btn btn-primary w-100"
-                                [disabled]="isDisable">SignIn with Google</button>
-                        </div>
-                        <div class="col-md-6">
-                            <button type="button" class="btn btn-primary w-100" (click)="signWithFacebook();"
-                                [disabled]="isDisable">Login with facebook</button>
-                        </div>
-                    </div>
-                    <a href="" class="float-left" data-toggle="modal" data-target="#exampleModal">forgot password?</a>
-                    <a routerLink="/signUp" class="float-right">SignUp?</a>
-                </form>
-                <div>
-                    <button (click)="yahooLogin()">Yahoo Login</button>
-                    <button (click)="hotMailLogin()">Sign in with Microsoft</button>
-
-                </div>
-            </div>
-        </div>
-    </div>
-</div> -->
-
-<!-- Forgot password Model -->
-
-<!-- <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Forgot Password</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <form [formGroup]="forgotPasswordForm" autocomplete="off">
-                    <div class="form-group">
-                        <label for="email">Email address:</label>
-                        <input type="email" class="form-control" formControlName="email">
-                    </div>
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" (click)="submitForgotPassword();"
-                    [disabled]="forgotPasswordForm.invalid">Submit</button>
-            </div>
-        </div>
-    </div>
-</div> -->
-
-
 <!-- New Design Integreat -->
-
-
 <section class="enter_section d-flex flex-wrap align-content-center" *ngIf="!isDiable">
 	<div class="container-fluid">
 		<h3 class="text-center">Aso Ebi</h3>
@@ -194,7 +103,8 @@
 							<input type="email" class="form-control" id="email" formControlName="email"
 								placeholder="Email/Phone Number" name="email"
 								[ngClass]="{ 'is-invalid': g.email.touched && g.email.errors }">
-							<div class="col-md-2" *ngIf="g.email.touched && g.email.errors" class="invalid-feedback text-white">
+							<div class="col-md-2" *ngIf="g.email.touched && g.email.errors"
+								class="invalid-feedback text-white">
 								<div *ngIf="g.email.errors.required">Email is required</div>
 								<div *ngIf="g.email.errors.email">Please enter valid Email</div>
 							</div>
