--- a/src/app/my-cart/my-cart.component.html
+++ b/src/app/my-cart/my-cart.component.html
@@ -1,49 +1,5 @@
 <!-- Display all addToCart items with price and quantity -->
-<!-- <div class="container">
-    <table class="table">
-        <thead class="thead-dark">
-            <tr>
-                <th>Activity Name</th>
-                <th>Group Name</th>
-                <th>Gender</th>
-                <th>Item Name</th>
-                <th class="product-price">Item Price</th>
-                <th class="product-quantity">Quantity</th>
-                <th></th>
-                <th class="product-line-price">Total</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let products of cartDetails" class="product" ng-init="count = 0">
-                <td>{{products.activityName}}</td>
-                <td>{{products.groupName}}</td>
-                <td>{{products.itemGender}}</td>
-                <td>{{products.itemName}}</td>
-                <td class="product-price">{{products.itemPrice}}</td>
-                <td class="product-quantity">
-                    <input type="number" min="1" [(ngModel)]="products.quantity">
-                </td>
-                <td>
-                    <button type="button" class="btn btn-danger" (click)="removeItem(products._id)">Remove
-                    </button>
-                </td>
-                <td>{{products.itemPrice * products.quantity }}</td>
-            </tr>
-            <tr>
-                <td>
-                    <button type="button" class="btn btn-primary" (click)="allItem(cartDetails)">Procced To Pay
-                    </button>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</div> -->
-
-
-
-
 <!-- New Design of my cart  -->
-
 <div class="step_one" style="display:none">
     <section class="buying_option1_section d-flex flex-wrap align-content-center ">
         <div class="container-fluid">
@@ -56,15 +12,10 @@
                 <div class="veiw_event">
                     <div class="event_inner_content">
                         <div class="event_detail_slider">
-                            <!-- <div class="event_detail_slide event_detail_slide_blue">
-								<div class="events_name text-center">
-									<a href="#" class="text-center text-white">Engagement</a>
-								</div>
-							</div> -->
                             <div class="event_detail_slide event_detail_slide_blue">
                                 <div class="events_name text-center">
                                     <a href="#" class="text-center text-white"
-                                    *ngIf="eventDetails">{{eventDetails.eventType}}</a>
+                                        *ngIf="eventDetails">{{eventDetails.eventType}}</a>
                                 </div>
                             </div>
                             <div class="event_detail_slide event_detail_slide_blue">
@@ -84,8 +35,6 @@
         </div>
     </section>
 </div>
-
-
 <div class="step_five">
     <section class="buying_option1_section buying_option5_section d-flex flex-wrap align-content-center ">
         <div class="container-fluid">
@@ -101,13 +50,13 @@
                             <div class="event_detail_slide event_detail_slide_sky1">
                                 <div class="events_name text-center">
                                     <a href="#" class="text-center text-white" *ngIf="eventDetails">
-                                    {{eventDetails.eventType}}</a>
+                                        {{eventDetails.eventType}}</a>
                                 </div>
                             </div>
                             <div class="event_detail_slide event_detail_slide_sky1">
                                 <div class="events_name text-center">
                                     <a (click)="nextSection('step_four', 'step_five')"
-                                    class="text-center text-white">Gift Donation</a>
+                                        class="text-center text-white">Gift Donation</a>
                                 </div>
                             </div>
                             <div class="event_detail_slide event_detail_slide_sky1">
@@ -126,88 +75,86 @@
                                             <div class="col-12" *ngIf="item.itemGender == 'male'">
                                                 <div class="all_list">
                                                     <div class="fabric_name float-left">{{item.itemName}} <img
-                                                        src="/assets/images/wn.png"> {{item.itemPrice}} </div>
-                                                        <div class="float-right number_of_item">
-                                                            <label class=""> x </label>
-                                                            <!-- <h1>helooooo</h1> -->
-                                                            <!-- {{item.quantity}} -->
-                                                            <input type="text" min="1"  
-                                                            (click)="finalTotal(item)"
-                                                            [(ngModel)]='item.quantity'>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-4 all_list_total_price" *ngIf="item.itemGender == 'male'">
-                                            <div class="row">
-                                                <div class="col-12">
-                                                    <div class=" float-right"> = <img src="/assets/images/wn.png">
-                                                    {{item.itemPrice * item.quantity }}</div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-1" *ngIf="item.itemGender == 'male'">
-                                            <div class="delete_item">
-                                                <i class="fa fa-times" aria-hidden="true"
-                                                (click)="removeItem(item._id)"></i>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <hr>
-                                    <p class="gender_select">Female</p>
-                                    <div class="row" *ngFor="let item of cartDetails">
-                                        <div class="col-7">
-                                            <div class="row">
-                                                <div class="col-12" *ngIf="item.itemGender=='female'">
-                                                    <div class="all_list">
-                                                        <div class="fabric_name float-left"> {{item.itemName}} <img
                                                             src="/assets/images/wn.png"> {{item.itemPrice}} </div>
-                                                            <div class="float-right number_of_item text-white">
-                                                                <label class=""> x </label>
-                                                                <input type="text" min="1" id="donation"
-                                                                (keyup)="finalTotal(item)"
-                                                                [(ngModel)]='item.quantity'>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-4 all_list_total_price" *ngIf="item.itemGender=='female'">
-                                                <div class="row">
-                                                    <div class="col-12">
-                                                        <div class=" float-right"> = <img src="/assets/images/wn.png">
-                                                        {{item.itemPrice * item.quantity }}</div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-1" *ngIf="item.itemGender=='female'">
-                                                <div class="delete_item">
-                                                    <i class="fa fa-times" aria-hidden="true"
-                                                    (click)="removeItem(item._id)"></i>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <hr>
-                                        <div class="all_total">
-                                            <div class="row">
-                                                <div class="col-11">
-                                                    <div class="float-left">Total</div>
-                                                    <div class="fabric_name float-right">= <img src="/assets/images/yn.png">
-                                                        {{finalGrandTotal}}
+                                                    <div class="float-right number_of_item">
+                                                        <label class=""> x </label>
+                                                        <!-- <h1>helooooo</h1> -->
+                                                        <!-- {{item.quantity}} -->
+                                                        <input type="text" min="1" (click)="finalTotal(item)"
+                                                            [(ngModel)]='item.quantity'>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="save_and_pay_btn">
-                                        <a class="update_btn text-center" (click)="allItem(cartDetails)">Procced</a>
-                                        <!-- <a class="paynow_btn text-center" (click)="addDonation()">Add Donation</a> -->
+                                    <div class="col-4 all_list_total_price" *ngIf="item.itemGender == 'male'">
+                                        <div class="row">
+                                            <div class="col-12">
+                                                <div class=" float-right"> = <img src="/assets/images/wn.png">
+                                                    {{item.itemPrice * item.quantity }}</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-1" *ngIf="item.itemGender == 'male'">
+                                        <div class="delete_item">
+                                            <i class="fa fa-times" aria-hidden="true"
+                                                (click)="removeItem(item._id)"></i>
+                                        </div>
                                     </div>
                                 </div>
+                                <hr>
+                                <p class="gender_select">Female</p>
+                                <div class="row" *ngFor="let item of cartDetails">
+                                    <div class="col-7">
+                                        <div class="row">
+                                            <div class="col-12" *ngIf="item.itemGender=='female'">
+                                                <div class="all_list">
+                                                    <div class="fabric_name float-left"> {{item.itemName}} <img
+                                                            src="/assets/images/wn.png"> {{item.itemPrice}} </div>
+                                                    <div class="float-right number_of_item text-white">
+                                                        <label class=""> x </label>
+                                                        <input type="text" min="1" id="donation"
+                                                            (keyup)="finalTotal(item)" [(ngModel)]='item.quantity'>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-4 all_list_total_price" *ngIf="item.itemGender=='female'">
+                                        <div class="row">
+                                            <div class="col-12">
+                                                <div class=" float-right"> = <img src="/assets/images/wn.png">
+                                                    {{item.itemPrice * item.quantity }}</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-1" *ngIf="item.itemGender=='female'">
+                                        <div class="delete_item">
+                                            <i class="fa fa-times" aria-hidden="true"
+                                                (click)="removeItem(item._id)"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="all_total">
+                                    <div class="row">
+                                        <div class="col-11">
+                                            <div class="float-left">Total</div>
+                                            <div class="fabric_name float-right">= <img src="/assets/images/yn.png">
+                                                {{finalGrandTotal}}
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="save_and_pay_btn">
+                                <a class="update_btn text-center" (click)="allItem(cartDetails)">Procced</a>
+                                <!-- <a class="paynow_btn text-center" (click)="addDonation()">Add Donation</a> -->
                             </div>
                         </div>
                     </div>
                 </div>
-            </section>
+            </div>
         </div>
+    </section>
+</div>
