--- a/src/app/payment/payment.component.html
+++ b/src/app/payment/payment.component.html
@@ -1,90 +1,5 @@
 <!-- Total payment of myCart items and if donation added display final total  -->
-
-<!-- <div class="container">
-    <table class="table">
-        <thead class="thead-dark">
-            <tr>
-                <th>Activity Name</th>
-                <th>Group Name</th>
-                <th>Gender</th>
-                <th>Item Name</th>
-                <th>Item Price</th>
-                <th>Quantity</th>
-                <th>Total</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let products of finalCartDetails" class="product">
-                <td>{{products.activityName}}</td>
-                <td>{{products.groupName}}</td>
-                <td>{{products.itemGender}}</td>
-                <td>{{products.itemName}}</td>
-                <td>{{products.itemPrice}}</td>
-                <td>
-                    <input type="number" min="1" [(ngModel)]="products.quantity" disabled>
-                </td>
-                <td>{{products.quantity*products.itemPrice}}</td>
-            </tr>
-            <tr>
-                <td>Total</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>
-                    {{grandTotal}}
-                </td>
-            </tr>
-
-            <tr>
-                <td>Donation</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>
-                    <input type="number" min="1" id="donation" (keyup)="finalTotal($event.target.value)"
-                        [(ngModel)]='donation'>
-                </td>
-            </tr>
-            <tr>
-                <td>GrandTotal</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>
-                    {{finalGrandTotal}}
-                </td>
-            </tr>
-            <tr>
-                <label for="comment">Address:</label>
-                <textarea placeholder="Enter Your Address" [(ngModel)]="address" id="address"></textarea>
-            </tr>
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>
-                    <button type="button" class="btn btn-primary"
-                        (click)="finalPayment(finalCartDetails,finalGrandTotal,donation,address)">CheckOut
-                    </button>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-</div> -->
-
-
 <!-- new Design of lastPayment -->
-
-
 <div class="step_one">
     <section class="buying_option1_section buying_option5_section d-flex flex-wrap align-content-center ">
         <div class="container-fluid">
@@ -116,20 +31,18 @@
                             </div>
                         </div>
                         <div class="radio_btn text-white">
-                           <p class="event_name_new"> ji</p>
-                           <div class="event_prise_detail">
-                            <p class="gender_select">Male</p>
-                            <div class="row" *ngFor="let item of finalCartDetails">
-                                <div class="col-7">
-                                    <div class="row">
-                                        <div class="col-12" *ngIf="item.itemGender == 'male'">
-                                            <div class="all_list all_list_height">
-                                                <div class="fabric_name float-left"> {{item.itemName}} <img
-                                                    src="/assets/images/wn.png"> {{item.itemPrice}} </div>
+                            <p class="event_name_new"> ji</p>
+                            <div class="event_prise_detail">
+                                <p class="gender_select">Male</p>
+                                <div class="row" *ngFor="let item of finalCartDetails">
+                                    <div class="col-7">
+                                        <div class="row">
+                                            <div class="col-12" *ngIf="item.itemGender == 'male'">
+                                                <div class="all_list all_list_height">
+                                                    <div class="fabric_name float-left"> {{item.itemName}} <img
+                                                            src="/assets/images/wn.png"> {{item.itemPrice}} </div>
                                                     <div class="float-right number_of_item">
-                                                        <!-- <label class=""> x </label> -->
-                                                        <input type="text" min="1" [(ngModel)]="item.quantity"
-                                                        disabled>
+                                                        <input type="text" min="1" [(ngModel)]="item.quantity" disabled>
                                                     </div>
                                                 </div>
                                             </div>
@@ -139,15 +52,12 @@
                                         <div class="row">
                                             <div class="col-12">
                                                 <div class=" float-right"> = <img src="/assets/images/wn.png">
-                                                 {{item.itemPrice * item.quantity }} </div>
+                                                    {{item.itemPrice * item.quantity }} </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                                 <hr>
-
-
-                                <!-- <p class="event_name_new" *ngIf="eventDetails"> {{eventDetails.eventType}}</p> -->
                                 <p class="gender_select">Female</p>
                                 <div class="row" *ngFor="let item of finalCartDetails">
                                     <div class="col-7">
@@ -155,109 +65,101 @@
                                             <div class="col-12" *ngIf="item.itemGender=='female'">
                                                 <div class="all_list all_list_height">
                                                     <div class="fabric_name float-left"> {{item.itemName}} <img
-                                                        src="/assets/images/wn.png"> {{item.itemPrice}} </div>
-                                                        <div class="float-right number_of_item">
-                                                            <!-- <label class=""> x </label> -->
-                                                            <input type="text" min="1" [(ngModel)]="item.quantity"
-                                                            disabled>
-                                                        </div>
+                                                            src="/assets/images/wn.png"> {{item.itemPrice}} </div>
+                                                    <div class="float-right number_of_item">
+                                                        <input type="text" min="1" [(ngModel)]="item.quantity" disabled>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="col-5 all_list_total_price" *ngIf="item.itemGender=='female'">
-                                            <div class="row">
-                                                <div class="col-12">
-                                                    <div class=" float-right"> = <img src="/assets/images/wn.png"> 
+                                    </div>
+                                    <div class="col-5 all_list_total_price" *ngIf="item.itemGender=='female'">
+                                        <div class="row">
+                                            <div class="col-12">
+                                                <div class=" float-right"> = <img src="/assets/images/wn.png">
                                                     {{item.itemPrice * item.quantity }} </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <hr>
-                                </div>
-                                <div class="all_total">
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <div class="float-left">Total</div>
-                                            <div class="fabric_name float-right"> = <img src="/assets/images/yn.png">
-                                                 {{grandTotal}}
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="all_total mt-2">
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <div class="float-left">FInal Total</div>
-                                            <div class="fabric_name float-right">= <img src="/assets/images/yn.png">
-                                                 {{finalGrandTotal}}
-                                            </div>
+                                <hr>
+                            </div>
+                            <div class="all_total">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="float-left">Total</div>
+                                        <div class="fabric_name float-right"> = <img src="/assets/images/yn.png">
+                                            {{grandTotal}}
                                         </div>
                                     </div>
                                 </div>
-                                <div class="save_and_pay_btn">
-                                    <a class="update_btn text-center"  (click)="finalPayment(finalCartDetails,finalGrandTotal,donation,address)">Procced</a>
-                                    <a class="paynow_btn text-center" (click)="nextSection('step_two', 'step_one')">Donation</a>
+                            </div>
+                            <div class="all_total mt-2">
+                                <div class="row">
+                                    <div class="col-12">
+                                        <div class="float-left">FInal Total</div>
+                                        <div class="fabric_name float-right">= <img src="/assets/images/yn.png">
+                                            {{finalGrandTotal}}
+                                        </div>
+                                    </div>
                                 </div>
+                            </div>
+                            <div class="save_and_pay_btn">
+                                <a class="update_btn text-center"
+                                    (click)="finalPayment(finalCartDetails,finalGrandTotal,donation,address)">Procced</a>
+                                <a class="paynow_btn text-center"
+                                    (click)="nextSection('step_two', 'step_one')">Donation</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
-    </div>
-
-
-
-    <div class="step_two" style="display:none">
-        <section class="buying_option1_section buying_option4_section d-flex flex-wrap align-content-center ">
-            <div class="container-fluid">
-                <h3 class="text-center text-white Aso_title">Aso Ebi</h3>
-                <div class="profile_pic text-center text-center">
-                    <img src="/assets/images/profile.png">
-                </div>
-                <h3 class="text-center text-white user_name"># Ayo Kunbi</h3>
-                <div class="card_inner_content_box">
-                    <div class="veiw_event">
-                        <div class="event_inner_content">
-                            <div class="event_detail_slider">
-                                <div class="event_detail_slide event_detail_slide_pink1">
-                                    <div class="events_name text-center">
-                                        <a href="#" class="text-center text-white">Engagement</a>
-                                    </div>
-                                </div>
-                                <div class="event_detail_slide event_detail_slide_pink1">
-                                    <div class="events_name text-center">
-                                        <a href="#" class="text-center text-white">Wedding</a>
-                                    </div>
-                                </div>
-                                <div class="event_detail_slide event_detail_slide_pink1">
-                                    <div class="events_name text-center">
-                                        <a href="#" class="text-center text-white">Gift Donation</a>
-                                    </div>
-                                </div>
-                                <div class="event_detail_slide event_detail_slide_pink1">
-                                    <div class="events_name text-center">
-                                        <a href="#" class="text-center text-white">Total</a>
-                                    </div>
+        </div>
+    </section>
+</div>
+<div class="step_two" style="display:none">
+    <section class="buying_option1_section buying_option4_section d-flex flex-wrap align-content-center ">
+        <div class="container-fluid">
+            <h3 class="text-center text-white Aso_title">Aso Ebi</h3>
+            <div class="profile_pic text-center text-center">
+                <img src="/assets/images/profile.png">
+            </div>
+            <h3 class="text-center text-white user_name"># Ayo Kunbi</h3>
+            <div class="card_inner_content_box">
+                <div class="veiw_event">
+                    <div class="event_inner_content">
+                        <div class="event_detail_slider">
+                            <div class="event_detail_slide event_detail_slide_pink1">
+                                <div class="events_name text-center">
+                                    <a href="#" class="text-center text-white">Engagement</a>
                                 </div>
                             </div>
-                            <div class="donation_detail">
-                                <div class="row">
-                                    <div class="col-12">
-                                        <div class="thanx_write text-white">
-                                            <p>Thank you for being here. Planning on getting
-                                                us a present - we are gestated. Gifts will not
-                                                be accepted on the wedding day, however, put
+                            <div class="event_detail_slide event_detail_slide_pink1">
+                                <div class="events_name text-center">
+                                    <a href="#" class="text-center text-white">Wedding</a>
+                                </div>
+                            </div>
+                            <div class="event_detail_slide event_detail_slide_pink1">
+                                <div class="events_name text-center">
+                                    <a href="#" class="text-center text-white">Gift Donation</a>
+                                </div>
+                            </div>
+                            <div class="event_detail_slide event_detail_slide_pink1">
+                                <div class="events_name text-center">
+                                    <a href="#" class="text-center text-white">Total</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="donation_detail">
+                            <div class="row">
+                                <div class="col-12">
+                                    <div class="thanx_write text-white">
+                                        <p>Thank you for being here. Planning on getting
+                                            us a present - we are gestated. Gifts will not
+                                            be accepted on the wedding day, however, put
                                             financial gift is very much appreciated.</p>
-                                        </div>
                                     </div>
-                                <!-- <div class="col-1">
-                                    <div class="cross_img float-right">
-                                        <img src="/assets/images/cross_img.png">
-                                    </div>
-                                </div> -->
+                                </div>
                             </div>
                             <div action="#" class="donation_form">
                                 <div class="row">
@@ -266,12 +168,13 @@
                                     </div>
                                     <div class="col-sm-10">
                                         <input type="number" min="1" (keyup)="finalTotal($event.target.value)"
-                                        [(ngModel)]='donation' value="donation">
+                                            [(ngModel)]='donation' value="donation">
                                     </div>
                                 </div>
                             </div>
                             <div class="save_and_pay_btn">
-                                <a class="save1_btn text-white text-center" (click)="nextSection('step_one', 'step_two')">Pay</a>
+                                <a class="save1_btn text-white text-center"
+                                    (click)="nextSection('step_one', 'step_two')">Pay</a>
                             </div>
                         </div>
                     </div>
